Some work on the front-end and its information box and support for named colours.

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -40,3 +40,13 @@ p {
 .table-charts form {
     margin: 0;
 }
+
+.option-colour {
+    font-weight: bold;
+    color: #fff;
+    padding: 2px 0;
+}
+
+.table-editable td {
+    padding: 4px;
+}
