--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,7 +73,7 @@ h1 {
  * PAGE CONTENT
  */
 #content {
-    padding: 0 10px;
+    padding: 0 10px 10px 10px;
 }
 
 /**
@@ -102,6 +102,7 @@ h1 {
     position: absolute;
     top: 0;
     right: 0;
+    padding: 0 0 10px 0;
 }
     .chart-info-help {
         padding: 60px 0 0 0;
