Refactored some code, made the chart page take the chart start and end time from the chart's settings and possibly some other changes.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,6 +96,9 @@ h1 {
 
     border-bottom: 3px solid #808080;
 }
+    .chart-content {
+        overflow: hidden;
+    }
 
 .chart-info {
     display: none;
